--- a/options.html
+++ b/options.html
@@ -4,7 +4,21 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/icons/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chrome Extensioin + React + TS + Vite App - Options</title>
+    <title>Group Tab Settings</title>
+    <style>
+      html {
+        height: 100vh;
+        width: 100vw;
+        margin: 0;
+      }
+      body {
+        background-color: #24166b;
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
