--- a/popup.html
+++ b/popup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/icon/icon_green.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/global.css" />
     <title>GroupTab</title>
   </head>
   <body>
